Noteworthy changes in version 2.0.2 (unreleased)   [C45/A0/R)]
------------------------------------------------


Noteworthy changes in version 2.0.1 (2025-09-23)   [C45/A0/R1]
------------------------------------------------

 * gnupg-key-manage: New tool as a framework for adding features
   which would normally be implemented by a script.  Right now it
   supports the commands "identify" and "delete-expired-keys".

 * Extend the internal gpgsm_assuan_simple_command to consume diag
   output.  This fixes a possible lockup.  [T7759]

 * Clean up get_max_fds implementation.  [T7694]

 * Adjust for changes to the posix test(1) command.  [T7807]

 * Make it easier to maintain gpgme.h by using forward declarations.
   [rM6a1f72b470]

 Release-info: https://dev.gnupg.org/T7817


Noteworthy changes in version 2.0.0 (2025-06-03)   [C45/A0/R0]
------------------------------------------------

 * The C++ bindings, the Qt bindings, and the Python bindings were
   split off of gpgme. They are now released separately.  [T7262]

 * New function gpgme_op_random_bytes to get cryptographically
   strong random bytes from gpg.  [T6694]

 * New function gpgme_op_random_value to get a cryptographically
   strong unsigned integer random value.   [T6694]

 * New decrypt flag to skip the actual decryption so that information
   about the recipients can be retrieved.

 * New flag for key generate to mark a (sub)key as group owned.

 * If the key passed to gpgme_signers_add was retrieved with an exact
   pattern (fingerprint with '!' suffix), the requested subkey is used
   for signing.  This reflects the behaviour of gpg but is a minor
   semantic change.  [T3325]

 * The timestamp and expires fields in gpgme_subkey_t, gpgme_key_sig,
   and gpgme_new_signature_t are changed from signed long to unsigned
   long to better cope with 32bit time_t implementations.  These
   fields should in reality never see an error value (-1).
