@@ -111,11 +111,14 @@ gpgme_error_t _gpgme_engine_op_encrypt_sign (engine_t engine,
 					     gpgme_ctx_t ctx /* FIXME */);
 gpgme_error_t _gpgme_engine_op_export (engine_t engine, const char *pattern,
 				       gpgme_export_mode_t mode,
-				       gpgme_data_t keydata, int use_armor);
+				       gpgme_data_t keydata,
+				       const char *export_filter,
+				       int use_armor);
 gpgme_error_t _gpgme_engine_op_export_ext (engine_t engine,
 					   const char *pattern[],
 					   gpgme_export_mode_t mode,
 					   gpgme_data_t keydata,
+					   const char *export_filter,
 					   int use_armor);
 gpgme_error_t _gpgme_engine_op_genkey (engine_t engine,
                                        const char *userid, const char *algo,
