@@ -219,7 +219,7 @@ export_start (gpgme_ctx_t ctx, int synchronous, const char *pattern,
   _gpgme_engine_set_status_handler (ctx->engine, export_status_handler, ctx);
 
   return _gpgme_engine_op_export (ctx->engine, pattern, mode, keydata,
-				  ctx->use_armor);
+				  ctx->export_filter, ctx->use_armor);
 }
 
 
@@ -294,7 +294,7 @@ export_ext_start (gpgme_ctx_t ctx, int synchronous, const char *pattern[],
   _gpgme_engine_set_status_handler (ctx->engine, export_status_handler, ctx);
 
   return _gpgme_engine_op_export_ext (ctx->engine, pattern, mode, keydata,
-				      ctx->use_armor);
+				      ctx->export_filter, ctx->use_armor);
 }
 
 
